fixed maven errors